--- a/src/components/menu-lateral/menu-lateral.scss
+++ b/src/components/menu-lateral/menu-lateral.scss
@@ -9,3 +9,18 @@
         height: 100%;
     }
 }
+
+.img-container {
+    width: 100%;
+    max-width: 150px;
+    aspect-ratio: 1 / 1;
+    border-radius: 50%;
+    overflow: hidden;
+}
+
+.imagem-circular {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    display: block;
+}
