--- a/src/index.scss
+++ b/src/index.scss
@@ -1,3 +1,3 @@
-@import './styles/typography.scss';
-@import './styles/variables.scss';
-@import './styles/buttons.scss';
+@use 'styles/typography.scss';
+@use 'styles/variables.scss';
+@use 'styles/buttons.scss';
